# Fluxnode

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CODE_IMPROVEMENT_PLAN.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json
api/: .gitignore  Cargo.toml
api/src/: core.rs  main.rs  services.rs
api/src/services/: bench_version.rs  demo.rs
client/: .env  .env.development  .env.production  .gitignore  .prettierignore  .prettierrc.toml  package-lock.json  package.json
client/public/: index.html
client/public/runtime/: app-content.js
client/src/: Application.jsx  Application.scss  apidata.js  app-buildinfo.js  g-analytic.js  index.js  utils.js
client/src/components/: AppToaster.js  FluxIcon.jsx
client/src/components/CountUp/: index.jsx
client/src/components/ErrorBoundary/: index.jsx
client/src/components/Footer/: index.jsx  index.scss
client/src/components/InfoCell/: index.jsx  index.scss
client/src/content/: appCategoryMeta.js  index.js
client/src/contexts/: LayoutContext.jsx
client/src/demo/: Demo.jsx  FailedToLoadDemo.jsx  demo.scss
client/src/guides/: GuidesView.jsx  guides.scss
client/src/home/: Home.jsx  Home.scss  apidata.js  flux_version.js
client/src/main/: MainApp.jsx  MainApp.scss  apidata.js
client/src/notfound/: index.jsx  index.scss
client/src/persistance/: store.js
client/src/styles/: _functional.scss  _global.scss  _lib.scss  _tables.scss  blueprint_overrides.css  normalize_elements.css
conf/: deploy-nginx.conf
service/: container-entrypoint.sh
service/dumb-init/: LICENSE  README.txt
(+63 files in other folders)
