[package]
name = "fluxnode_api_mask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4"
tokio-retry = "0.3"
tokio-timer = "0.2.13"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
futures = "0.3"
axum = "0.5.14"
tower-http = { version = "0.3.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
